[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "foo"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.

[dependencies]
random = "0.12.0"
